# xtr

./: .cirrus.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  README.md  codecov.yml  conanfile.py  conanfile.txt  lgtm.yml
.github/workflows/: codeql-analysis.yml  docs.yml  macos_gcc.yml  single_include.yml  ubuntu_clang.yml  ubuntu_clang_cmake.yml  ubuntu_clang_conan.yml  ubuntu_clang_sanitizer.yml  ubuntu_gcc.yml  ubuntu_gcc_cmake.yml  ubuntu_gcc_conan.yml  ubuntu_gcc_sanitizer.yml
benchmark/: CMakeLists.txt  logger.cpp
docs/: api.html  genindex.html  guide.html  index.html  libxtr-quickstart.3  libxtr-userguide.3  libxtr.3  objects.inv  quickstart.html  search.html  searchindex.js  xtr.html  xtrctl.1  xtrctl.html
docs-src/: Doxyfile  api.rst  conf.py  guide.rst  index.rst  quickstart.rst  xtrctl.rst
docs-src/_templates/: layout.html
docs/_sources/: api.rst.txt  guide.rst.txt  index.rst.txt  quickstart.rst.txt  xtr.rst.txt  xtrctl.rst.txt
include/xtr/: command_path.hpp  config.hpp  formatters.hpp  log_level.hpp  log_macros.hpp  logger.hpp  nocopy.hpp  pump_io_stats.hpp  sink.hpp  streamed.hpp  tags.hpp  timespec.hpp  vcopy.hpp
include/xtr/detail/: align.hpp  assert.hpp  assume.hpp  buffer.hpp  clock_ids.hpp  concepts.hpp  config.hpp  consumer.hpp  cpuid.hpp  file_descriptor.hpp  get_time.hpp  is_c_string.hpp  memory_mapping.hpp  mirrored_memory_mapping.hpp  pagesize.hpp  pause.hpp  print.hpp  retry.hpp  sanitize.hpp  string.hpp  string_ref.hpp  string_table.hpp  strzcpy.hpp  synchronized_ring_buffer.hpp  tags.hpp  throw.hpp  trampolines.hpp  transform_args.hpp  tsc.hpp  vcopy.hpp  vcopy_wrapper.hpp
include/xtr/detail/commands/: command_dispatcher.hpp  command_dispatcher_fwd.hpp  connect.hpp  frame.hpp  ios.hpp  matcher.hpp  message_id.hpp  pattern.hpp  recv.hpp  regex_matcher.hpp  requests.hpp  requests_fwd.hpp  responses.hpp  send.hpp  wildcard_matcher.hpp
include/xtr/io/: fd_storage.hpp  io_uring_fd_storage.hpp  posix_fd_storage.hpp  storage_interface.hpp
include/xtr/io/detail/: fd_storage_base.hpp  open.hpp
scripts/: make_single_include.sh
single_include/xtr/: logger.hpp
src/: buffer.cpp  command_dispatcher.cpp  command_path.cpp  consumer.cpp  fd_storage.cpp  fd_storage_base.cpp  file_descriptor.cpp  io_uring_fd_storage.cpp  log_level.cpp  logger.cpp  matcher.cpp  memory_mapping.cpp  mirrored_memory_mapping.cpp  open.cpp  pagesize.cpp  posix_fd_storage.cpp  regex_matcher.cpp  sink.cpp  throw.cpp  tsc.cpp  wildcard_matcher.cpp  xtrctl.cpp
src/xtrctl/: main.cpp
test/: CMakeLists.txt  align.cpp  command_client.cpp  command_client.hpp  command_dispatcher.cpp  fd_storage.cpp  file_descriptor.cpp  llvm_mca.cpp  logger.cpp  main.cpp  memory_mapping.cpp  mirrored_memory_mapping.cpp  pagesize.cpp  single_include.cpp  synchronized_ring_buffer.cpp  temp_file.hpp  throw.cpp
test_package/: conanfile.py
